<resources>
    <string name="app_name">FrameText</string>
    <string name="text_input">Text input</string>
    <string name="settings">Settings</string>
    <string name="image">Image</string>
    <string name="generateImage">Generate image</string>
    <string name="load_save_files">Load/Save files &#62;</string>
    <string name="enter_text_to_frame">Enter the text you want framed</string>
    <string name="hyphenate_file">Hyphenate file</string>
    <string name="download_hyphenation_files">Download hyphenation files  &#62;</string>
    <string name="download">Download</string>
    <string name="needToDownLoad">(Need to download)</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="back">&#60; Back</string>
    <string name="hyphenate_switch">Hyphenate</string>
    <string name="optimize_spacing_switch">Optimize spacing</string>
    <string name="txt_to_symbol_dist">Symbol to text distance</string>
    <string name="enter_number_between_0_50">0…50</string>
    <string name="margin">Margin</string>
    <string name="enter_number_between_0_500">0…500</string>
    <string name="use_emoji">Use emoji</string>
    <string name="shape_color">Symbol color</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
    <string name="cancel">Cancel</string>
    <string name="saveSettings">Save settings</string>
    <string name="deleteSettings">Delete settings</string>
    <string name="saveSettingsInfo">On pressing “OK”, the settings will be saved and set next time you open FrameText.</string>
    <string name="deleteSettingsInfo">On pressing “OK”, the default settings will be set next time you open FrameText.</string>
    <string name="error_no_text">No text has been entered. Please type in some text.</string>
    <string name="error_text_too_short">Text is too short. Please enter more text.</string>
    <string name="error_no_width_or_height">Either width or height or both are zero.</string>
    <string name="error_unexpected">An unexpected error occurred.</string>
    <string name="enter_file_name">Please enter a file name</string>
    <string name="save_as_file">Save as file&#8230;</string>
    <string name="save_file">Save file</string>
    <string name="saved_files">Saved files</string>
    <string name="enter_filename">(Enter file name)</string>
    <string name="load">Load</string>
    <string name="image_description">Frame Text Image</string>
    <string name="frame_shape_settings">Frame shape settings &#62;</string>
    <string name="emoji">Emoji</string>
    <string name="edge_shape">Symbol</string>
    <string name="main_shape">Main shape</string>
    <string name="select_emoji">Select an emoji</string>
    <string name="select_symbol">Select a symbol</string>
    <string name="select_main_shape">Select a main shape</string>
    <string name="new_features">New features &#62;</string>
    <string name="not_purchased_more_emojis">You can buy more emojis. To do this, press \u0022&#60; Back\u0022, scroll down if necessary and select \u0022New features &#62;\u0022.</string>
    <string name="not_purchased_more_symbols">You can buy more symbols. To do this, press \u0022&#60; Back\u0022, scroll down if necessary and select \u0022New features &#62;\u0022.</string>
    <string name="new_features_ellipsis">New features…</string>
    <string name="info">Info…</string>
    <string name="buy">Buy!</string>
    <string name="already_purchased">(Purchased)</string>
    <string name="info_description">[screenshot of choices]</string>
    <string name="close">Close</string>
    <string name="price">Price:&#160;%1$s</string>
    <string name="title_more_emojis">More emojis</string>
    <string name="title_more_symbols">More symbols</string>
    <string name="description_emojis">Allows you to choose from an extra 12 more emojis. See inside red markings.</string>
    <string name="description_symbols_and_colours">Allows you to choose between an extra 16 other symbols and 8 drawn characters used in previous versions of FrameText. See inside red frame.</string>
    <string name="already_purchased_">Already purchased!</string>
    <string name="font_settings">Font settings &#62;</string>
    <string name="font_family">Font name</string>
    <string name="bold_switch">Bold</string>
    <string name="italic_switch">Italic</string>
    <string name="min_dist_symbols">Min. dist. symbols</string>
    <string name="number_between_100_500">100…500</string>
    <string name="less_than_100_error_msg">"%d is less than 100 and won't be saved."</string>
    <string name="blank_default_error_msg">"As field is blank, default for symbol/emoji will be used."</string>
    <string name="select">Select \u0026 close</string>
    <string name="standard">Standard color</string>
    <string name="custom">Custom color</string>
    <string name="opacity">Opacity</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ok">OK</string>
    <string name="save_image">Save Image</string>
    <string name="save_image_title">Image saved in Gallery</string>
    <string name="save_image_content">Your image should appear in Gallery section of your mobile phone.</string>
    <string name="text_alignment">Text alignment</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
</resources>