<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/transparent"
        android:padding="5dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:theme="@style/plainBlue" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_as_file"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="3dp" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/enter_filename"
            android:autofillHints="@string/enter_filename"
            android:inputType="text" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="0dp"
            android:padding="1dp"
            style="@style/pinkMagentaButton"
            android:text="@string/save_file"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_files"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="3dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userFileRecyclerView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/border_ui"
        android:scrollbars="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp" />
</LinearLayout>