<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/font_settings"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_weight="1">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/transparent"
        android:padding="5dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:theme="@style/plainBlue" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_color"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <FrameLayout
                    android:orientation="vertical"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="20dp">
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/highlightBlue"/>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/white"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/textColorButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/black"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_family"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinnerFontFamilies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/boldSwitch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:text="@string/bold_switch" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/italicSwitch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:text="@string/italic_switch" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_alignment"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <RadioGroup
                android:id="@+id/group_radios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <RadioButton android:id="@+id/radio_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <RadioButton android:id="@+id/radio_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/center"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <RadioButton android:id="@+id/radio_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>