<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:id="@+id/text_input_frame"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <EditText
        android:id="@+id/editTextInput"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:gravity="start|top"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/enter_text_to_frame"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="@color/fog"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generateImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="0dp"
            android:padding="5dp"
            style="@style/pinkMagentaButton"
            android:text="@string/generateImage"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loadSaveFileNavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/transparent"
            android:padding="5dp"
            android:text="@string/load_save_files"
            android:textAllCaps="false"
            style="@style/plainBlue" />
    </LinearLayout>
</LinearLayout>