<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/frame_shapes_frame"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_weight="1">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/transparent"
        android:padding="5dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/plainBlue" />
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/useEmojiSwitch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:padding="4dp"
                android:text="@string/use_emoji" />

            <LinearLayout
                android:id="@+id/emojiLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emojiText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emoji"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <FrameLayout
                    android:id="@+id/emojiButtonFrameLayout"
                    android:orientation="vertical"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="20dp">
                    <View
                        android:id="@+id/emojiButtonFrame"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/highlightBlue"/>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/white"/>
                    <com.example.frametext.userControls.EmojiCellCtrl
                        android:id="@+id/emojiButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/white"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/symbolLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edgeShapeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edge_shape"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <FrameLayout
                    android:id="@+id/filledShapeButtonFrameLayout"
                    android:orientation="vertical"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="20dp">
                    <View
                        android:id="@+id/filledShapeButtonFrame"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/highlightBlue"/>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/white"/>
                    <com.example.frametext.userControls.ShapeCellCtrl
                        android:id="@+id/filledShapeButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/white"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/symbolColourLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/shapeColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shape_color"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <FrameLayout
                    android:orientation="vertical"
                    android:id="@+id/shapeColorFrameLayout"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="20dp">
                    <View
                        android:id="@+id/shapeColorButtonFrame"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/highlightBlue"/>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/white"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/symbolsColorButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/red"/>
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_dist_symbols"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="35dp"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/min_dist_symbols"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/number_between_100_500"
                    android:autofillHints="0"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainShapeLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mainShapeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_shape"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp"
                    android:textColor="@color/black"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <FrameLayout
                    android:id="@+id/unfilledShapeButtonFrameLayout"
                    android:orientation="vertical"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="20dp">
                    <View
                        android:id="@+id/unfilledShapeButtonFrame"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@color/highlightBlue"/>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/white"/>
                    <com.example.frametext.userControls.MainShapeCellCtrl
                        android:id="@+id/unfilledShapeButton"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginEnd="2dp"
                        android:background="@color/white"/>
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/noPurchaseMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_purchase"
                android:layout_marginStart="10dp"
                android:layout_marginTop="13dp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>
    </FrameLayout>
    <TextView
        android:id="@+id/warningMsg"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        android:textColor="@color/red"/>
</LinearLayout>